# apache-airflow-microsoft-fabric-plugin

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/apache_airflow_microsoft_fabric_plugin/hooks/: fabric.py
src/apache_airflow_microsoft_fabric_plugin/operators/: fabric.py
src/apache_airflow_microsoft_fabric_plugin/triggers/: fabric.py
tests/hooks/: __init__.py  fabric.py
